fix autocomplete dropdown alignment; fix add/remove Provider functions

--- a/src/components/ProviderDetail/Autocomplete/Autocomplete.component.scss
+++ b/src/components/ProviderDetail/Autocomplete/Autocomplete.component.scss
@@ -34,3 +34,9 @@
 .search-state {
   margin-bottom: 5px;
 }
+
+.provider-input {
+  .form-control {
+    float: none;
+  }
+}
